lesson3/css/small.css
/*Navigation************************************/

@import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
nav {
    background-color: #e5e5e5;
    text-align: center;
    max-width: 767px;
    margin: 0 auto;
    border-radius: 5px;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

nav li a {
    display: block;
    color: #1D3557;
    text-align: center;
    padding: 0.75rem;
    text-decoration: none;
    font-size: 0.95rem;
}

a.active:hover {
    color: white;
}

nav li a:hover:not(.active) {
    background-color: #b7b7b7;
    color: white;
}

.active {
    background-color: #87aab9;
}


/*Main Page Content************************************/

header,
nav,
main,
footer {
    margin: 1.25rem auto;
    max-width: 760px;
}

header,
footer {
    background-color: #457b9d;
    color: white;
    text-align: center;
    border-radius: 5px;
}

header {
    padding: 1px;
}

body {
    background-color: #f7f7f7;
    color: #1d3557;
    font-size: 16px;
    font-family: 'Montserrat', sans-serif;
}


/*typography*/

table,
td,
th {
    border: 1px solid #e5e5e5;
}

#sample1 {
    font-family: 'Comfortaa', cursive;
    font-size: 40px;
    /*background-color*/
    /*color*/
}

#sample2 {
    font-family: 'Montserrat', sans-serif;
    font-size: 30px;
    /*background-color*/
    /*color*/
}

#sample3 {
    font-family: 'Montserrat', sans-serif;
    font-size: 20px;
    /*background-color*/
    /*color*/
}

#sample4 {
    font-family: 'Comfortaa', cursive;
    font-size: 30px;
}

#sample5 {
    font-family: 'Comfortaa', cursive;
    font-size: 25px;
    /*color*/
}

#sample6 {
    font-family: 'Comfortaa', cursive;
    font-size: 20px
    /*color*/
}

#sample7 {
    font-family: 'Montserrat', sans-serif;
    font-size: 16px;
    /*color*/
}


/*color scheme*/

.colors {
    width: 100%;
    min-width: 350px;
    margin: auto;
    text-align: center;
}

.colors th {
    background-color: #e5e5e5;
}

.colors td {
    width: 25%;
    height: 3em;
}

.primary {
    background-color: #15AADC;
}

.accent1 {
    background-color: #FFD82D;
}

.accent2 {
    background-color: #FFAA32;
}

.neutral1 {
    background-color: #E6E6E6;
}

.neutral2 {
    background-color: #A3A3A3;
}


/*Footer************************************/

footer {
    font-size: 16px;
    padding: 1px;
}

footer a {
    color: white;
}

a:hover {
    color: #a8dadc;
}

a:link {
    text-decoration: none;
}

